--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <div class="bio-image">
-      <img src="/assets/images/headshot.jpg" alt="Philippe Tłokiński headshot">
+      <img src="/assets/images/headshot1.jpg" alt="Philippe Tłokiński headshot">
     </div>
   </div>
 </section>
