--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 <section class="section" id="gallery">
   <h2>Gallery</h2>
   <div class="grid">
+    <img src="/assets/images/headshot2.jpg" alt="">
+    <img src="/assets/images/headshot3.jpg" alt="">
     <img src="/assets/images/gallery1.jpg" alt="">
-    <img src="/assets/images/gallery2.jpg" alt="">
-    <img src="/assets/images/gallery3.jpg" alt="">
   </div>
 </section>
 
