--- a/index.html
+++ b/index.html
@@ -219,5 +219,12 @@ document.addEventListener("DOMContentLoaded", function () {
 });
 </script>
 
+<div class="site-note">
+  <span class="site-note__icon">⚠️</span>
+  <span class="site-note__text">
+    Strona w trakcie budowy — aktualnie pracuję nad treścią i strukturą.
+  </span>
+</div>
+  
 </body>
 </html>
