--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ document.addEventListener("DOMContentLoaded", function () {
 <div class="site-note">
   <span class="site-note__icon">⚠️</span>
   <span class="site-note__text">
-    Strona w trakcie budowy — aktualnie pracuję nad treścią i strukturą.
+    Website in construction!
   </span>
 </div>
   
