--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         </p>
         
         <p>
-          He is also a 
-          <a href="/magician" class="magician-button">Magician</a>.
+          Beyond the stage and screen, he is also a 
+          <a href="/magician" class="magician-button">magician</a>.
         </p>
 
 
