--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
         </p>
         
         <p>
-          Beyond the stage and screen, he is also a 
-          <a href="/magician" class="magician-button">magician</a>.
+          Beyond the stage and screen, he is also a magician.
         </p>
 
 
