--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="grid">
       <img src="/assets/images/headshot2.jpg" alt="">
       <img src="/assets/images/headshot3.jpg" alt="">
-      <img src="/assets/images/gallery1.jpg" alt="">
+      <img src="/assets/images/headshot4.jpg" alt="">
     </div>
 
   </div>
