--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </p>
         <p>Tel. <a href="tel:+48608638538">+48 608 638 538</a></p>
         <p>Email: <a href="mailto:office@st-gama.pl">office@st-gama.pl</a></p>
-        <p><a href="https://st-gama.pl" target="_blank">st-gama.pl</a></p>
+        <p><a href="https://st-gama.pl" target="_blank">www.st-gama.pl</a></p>
       </div>
 
       <!-- UK -->
@@ -170,7 +170,7 @@
         </p>
         <p>Tel. <a href="tel:+442077203355">+44 20 7720 3355</a></p>
         <p>Email: <a href="mailto:talent@stevensonwithers.com">talent@stevensonwithers.com</a></p>
-        <p><a href="https://www.stevensonwithers.com" target="_blank">stevensonwithers.com</a></p>
+        <p><a href="https://www.stevensonwithers.com" target="_blank">www.stevensonwithers.com</a></p>
       </div>
 
       <!-- USA -->
@@ -184,7 +184,7 @@
         </p>
         <p>Tel. <a href="tel:+12127790814">+1 212 779 0814</a></p>
         <p>Email: <a href="mailto:office@metropolisagency.com">office@metropolisagency.com</a></p>
-        <p><a href="https://metropolisagency.com/contacts/" target="_blank">metropolisagency.com</a></p>
+        <p><a href="https://metropolisagency.com" target="_blank">www.metropolisagency.com</a></p>
       </div>
 
       <!-- FRANCE -->
@@ -197,6 +197,7 @@
         </p>
         <p>Tel. <a href="tel:+33140020030">+33 1 40 02 00 30</a></p>
         <p>Email: <a href="mailto:agence.lapertot@gmail.com">agence.lapertot@gmail.com</a></p>
+        <p><a href="https://www.agencemartinelapertot.com" target="_blank">www.agencemartinelapertot.com</a></p>
       </div>
 
     </div>
