--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </p>
         <p>Tel. <a href="tel:+442077203355">+44 20 7720 3355</a></p>
         <p>Email: <a href="mailto:talent@stevensonwithers.com">talent@stevensonwithers.com</a></p>
-        <p><a href="https://www.stevensonwithers.com" target="_blank">www.stevensonwithers.com</a></p>
+        <p><a href="https://stevensonwithers.com" target="_blank">www.stevensonwithers.com</a></p>
       </div>
 
       <!-- USA -->
