--- a/magician/index.html
+++ b/magician/index.html
@@ -48,72 +48,92 @@
 <!-- STORY / BIO -->
 
 <section class="section" id="story">
+  <div class="section-inner">
 
-  <h2>Magician</h2>
+    <h2>Magician</h2>
 
-  <p>
-    Philippe na co dzień jest aktorem. Być może widzieli go Państwo w filmach,
-    serialach lub na deskach teatru. Tak się składa, że jest także iluzjonistą.
-  </p>
+    <div class="bio-wrapper">
+      <div class="bio-text">
+        <p>
+          Philippe na co dzień jest aktorem. Być może widzieli go Państwo w filmach,
+          serialach lub na deskach teatru.
+        </p>
 
-  <p>
-    W swoich pokazach łączy teatr, narrację i klasyczną iluzję,
-    tworząc doświadczenie skierowane zarówno do dzieci,
-    jak i dorosłych widzów.
-  </p>
+        <p>
+          Tak się składa, że jest także iluzjonistą.
+        </p>
 
+        <p>
+          W swoich pokazach łączy teatr, narrację i klasyczną iluzję,
+          tworząc doświadczenie skierowane zarówno do dzieci,
+          jak i dorosłych widzów.
+        </p>
+      </div>
+
+      <div class="bio-image">
+        <img src="/assets/images/magician-home.jpg" alt="Philippe Tłokiński magician portrait">
+      </div>
+    </div>
+
+  </div>
 </section>
 
 <!-- VIDEO -->
 
 <section class="section" id="video">
+  <div class="section-inner">
 
-  <h2>Video</h2>
+    <h2>Video</h2>
 
-  <div class="video-wrapper">
-    <iframe
-      src="https://www.youtube.com/embed/TwojKOD"
-      title="Magic Performance Philippe Tłokiński"
-      allowfullscreen>
-    </iframe>
+    <div class="video-wrapper">
+      <iframe
+        src="https://www.youtube.com/embed/TwojKOD"
+        title="Magic Performance Philippe Tłokiński"
+        allowfullscreen>
+      </iframe>
+    </div>
+
   </div>
-
 </section>
 
 <!-- PERFORMANCE -->
 
 <section class="section" id="performance">
+  <div class="section-inner">
 
-  <h2>Performance</h2>
+    <h2>Performance</h2>
 
-  <p>
-    Chcecie zamowic tak zwany „Red Jacket Show”, Philippe zalozy swoją czerwoną marynarkę
-    i niczym superbohater zadba o dobrą zabawę podczas urodzin, komunii
-    oraz wydarzeń rodzinnych.
-  </p>
+    <p>
+      Chcecie zamówić „Red Jacket Show”? Philippe założy swoją czerwoną marynarkę
+      i niczym superbohater zadba o dobrą zabawę podczas urodzin, komunii
+      oraz wydarzeń rodzinnych.
+    </p>
 
-  <p>
-    Najczęściej jest to 40-minutowy pokaz iluzji przeznaczony dla widzów
-    w różnym wieku — zarówno dla dzieci, jak i dorosłych.
-  </p>
+    <p>
+      Najczęściej jest to 40-minutowy pokaz iluzji przeznaczony dla widzów
+      w różnym wieku — zarówno dla dzieci, jak i dorosłych.
+    </p>
 
+  </div>
 </section>
 
 <!-- CONTACT -->
 
 <section class="section" id="contact">
+  <div class="section-inner">
 
-  <h2>Contact</h2>
+    <h2>Contact</h2>
 
-  <p>Rezerwacje i współpraca:</p>
+    <p>Rezerwacje i współpraca:</p>
 
-  <p>
-    <strong>Email:</strong>
-    <a href="mailto:contact@philippetlokinski.com">
-      contact@philippetlokinski.com
-    </a>
-  </p>
+    <p>
+      Email:
+      <a href="mailto:contact@philippetlokinski.com">
+        contact@philippetlokinski.com
+      </a>
+    </p>
 
+  </div>
 </section>
 
 </body>
