--- a/magician/index.html
+++ b/magician/index.html
@@ -20,12 +20,13 @@
   </div>
 
   <nav class="topbar-nav">
-    <a href="#story">Magician</a>
-    <a href="#video">Video</a>
-    <a href="#performance">Performance</a>
-    <a href="#contact">Contact</a>
-    <a href="/">Actor</a>
-  </nav>
+  <a href="#story">Magician</a>
+  <a href="#video">Video</a>
+  <a href="#gallery">Gallery</a>
+  <a href="#performance">Performance</a>
+  <a href="#contact">Contact</a>
+  <a href="/">Actor</a>
+</nav>
 
 </header>
 
