--- a/magician/index.html
+++ b/magician/index.html
@@ -97,6 +97,29 @@
   </div>
 </section>
 
+<!-- GALLERY -->
+
+<section class="section" id="gallery">
+  <div class="section-inner">
+
+    <h2>Gallery</h2>
+
+    <div class="grid">
+      <img src="/assets/images/magic1.jpg" alt="">
+      <img src="/assets/images/magic2.jpg" alt="">
+      <img src="/assets/images/magic3.jpg" alt="">
+      <img src="/assets/images/magic4.jpg" alt="">
+      <img src="/assets/images/magic5.jpg" alt="">
+      <img src="/assets/images/magic6.jpg" alt="">
+      <img src="/assets/images/magic7.jpg" alt="">
+      <img src="/assets/images/magic8.jpg" alt="">
+      <img src="/assets/images/magic9.jpg" alt="">
+      <img src="/assets/images/magic10.jpg" alt="">
+    </div>
+
+  </div>
+</section>
+
 <!-- PERFORMANCE -->
 
 <section class="section" id="performance">
