--- a/magician/index.html
+++ b/magician/index.html
@@ -17,6 +17,7 @@
     <a href="#">Facebook</a>
     <a href="#">IMDb</a>
     <a href="#">LinkedIn</a>
+    <a href="#">TikTok</a>
   </div>
 
   <nav class="topbar-nav">
