--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <a href="#">Facebook</a>
     <a href="#">IMDb</a>
     <a href="#">LinkedIn</a>
+    <a href="#">TikTok</a>
   </div>
 
   <nav class="topbar-nav">
