--- a/index.html
+++ b/index.html
@@ -30,27 +30,43 @@
   </nav>
 </header>
 
+<!-- HERO -->
+
 <section class="hero actor-hero">
   <div class="hero-inner">
     <h1>Philippe Tłokiński</h1>
     <p class="role">Actor · Magician</p>
 
-    <div class="hero-buttons">
-      <a href="#biography" class="btn btn-outline-light">Actor</a>
-      <a href="/magician/" class="btn btn-outline-accent">Magician</a>
+    <div class="role-switch">
+      <a href="/" class="role-btn role-btn--actor">Actor</a>
+      <a href="/magician/" class="role-btn role-btn--magician">Magician</a>
     </div>
   </div>
 </section>
 
 <!-- BIOGRAPHY -->
+
 <section class="section" id="biography">
   <div class="section-inner">
     <h2>Biography</h2>
     <div class="bio-wrapper">
       <div class="bio-text">
-        <p>Of Polish origin, Philippe was born in France and raised in Switzerland. A graduate of the École Nationale Supérieure d’Art Dramatique de Saint-Étienne (France), he has worked over the years on numerous projects with renowned directors such as Ludovic Lagarde, Séverine Chavrier, Yves-Noël Genod, Hervé Loichemol, Joan Mompart and Ivan Viripaev.</p>
-        <p>He has appeared in various television series, but is best known for his performances in films such as <em>Noc Walpurgi</em>, <em>Kurier</em>, and <em>Adventures of a Mathematician</em>.</p>
-        <p>A polyglot (French, Polish, English and Italian), he explores with great curiosity the influence of language on acting. Passionate about music and dance, he regularly practices singing, piano and tap dance.</p>
+        <p>
+          Of Polish origin, Philippe was born in France and raised in Switzerland. 
+          A graduate of the École Nationale Supérieure d’Art Dramatique de Saint-Étienne (France), 
+          he has worked over the years on numerous projects with renowned directors such as 
+          Ludovic Lagarde, Séverine Chavrier, Yves-Noël Genod, Hervé Loichemol, 
+          Joan Mompart and Ivan Viripaev.
+        </p>
+        <p>
+          He has appeared in various television series, but is best known for his performances 
+          in films such as <em>Noc Walpurgi</em>, <em>Kurier</em>, and <em>Adventures of a Mathematician</em>.
+        </p>
+        <p>
+          A polyglot (French, Polish, English and Italian), he explores with great curiosity 
+          the influence of language on acting. Passionate about music and dance, he regularly 
+          practices singing, piano and tap dance.
+        </p>
         <p>Beyond the stage and screen, he is also a magician.</p>
 
         <div class="cv-buttons">
@@ -67,6 +83,7 @@
 </section>
 
 <!-- SHOWREEL -->
+
 <section class="section" id="showreel">
   <div class="section-inner">
     <h2>Showreel</h2>
@@ -77,6 +94,7 @@
 </section>
 
 <!-- GALLERY -->
+
 <section class="section" id="gallery">
   <div class="section-inner">
     <h2>Gallery</h2>
@@ -89,6 +107,7 @@
 </section>
 
 <!-- NEWS -->
+
 <section class="section" id="news">
   <div class="section-inner">
     <h2>News</h2>
@@ -97,6 +116,7 @@
 </section>
 
 <!-- REPRESENTATION -->
+
 <section class="section" id="representation">
   <div class="section-inner">
     <h2>Representation</h2>
@@ -142,12 +162,15 @@
 </section>
 
 <!-- CONTACT -->
+
 <section class="section" id="contact">
   <div class="section-inner">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:contact@philippetlokinski.com">contact@philippetlokinski.com</a></p>
   </div>
 </section>
+
+<!-- IMAGE LIGHTBOX SCRIPT -->
 
 <script>
 document.addEventListener("DOMContentLoaded", function () {
@@ -175,11 +198,6 @@ document.addEventListener("DOMContentLoaded", function () {
   });
 });
 </script>
-
-<div class="site-note">
-  <span class="site-note__icon">⚠️</span>
-  <span class="site-note__text">Website in construction!</span>
-</div>
 
 </body>
 </html>
