--- a/magician/index.html
+++ b/magician/index.html
@@ -10,7 +10,6 @@
 <body class="page page--magician">
 
 <header class="topbar">
-
   <div class="topbar-left">
     <a href="#">Twitter</a>
     <a href="#">Instagram</a>
@@ -21,50 +20,41 @@
   </div>
 
   <nav class="topbar-nav">
-  <a href="#story">Magician</a>
-  <a href="#video">Video</a>
-  <a href="#gallery">Gallery</a>
-  <a href="#performance">Performance</a>
-  <a href="#contact">Contact</a>
-  <a href="/">Actor</a>
-</nav>
-
+    <a href="#story">Magician</a>
+    <a href="#video">Video</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#performance">Performance</a>
+    <a href="#contact">Contact</a>
+    <a href="/">Actor</a>
+  </nav>
 </header>
 
 <!-- HERO -->
 
 <section class="hero magician-hero">
-
   <div class="hero-inner">
     <h1>Philippe Tłokiński</h1>
     <p class="role">Magician · Actor</p>
 
-    <div class="hero-buttons">
-      <a href="/" class="btn btn-outline-light">Actor</a>
-      <a href="#story" class="btn btn-outline-accent">Magician</a>
+    <div class="role-switch">
+      <a href="/" class="role-btn role-btn--actor">Actor</a>
+      <a href="/magician/" class="role-btn role-btn--magician">Magician</a>
     </div>
   </div>
-
 </section>
 
 <!-- STORY / BIO -->
 
 <section class="section" id="story">
   <div class="section-inner">
-
     <h2>Magician</h2>
-
     <div class="bio-wrapper">
       <div class="bio-text">
         <p>
           Philippe na co dzień jest aktorem. Być może widzieli go Państwo w filmach,
           serialach lub na deskach teatru.
         </p>
-
-        <p>
-          Tak się składa, że jest także iluzjonistą.
-        </p>
-
+        <p>Tak się składa, że jest także iluzjonistą.</p>
         <p>
           W swoich pokazach łączy teatr, narrację i klasyczną iluzję,
           tworząc doświadczenie skierowane zarówno do dzieci,
@@ -76,7 +66,6 @@
         <img src="/assets/images/magician-home.jpg" alt="Philippe Tłokiński magician portrait">
       </div>
     </div>
-
   </div>
 </section>
 
@@ -84,17 +73,10 @@
 
 <section class="section" id="video">
   <div class="section-inner">
-
     <h2>Video</h2>
-
     <div class="video-wrapper">
-      <iframe
-        src="https://www.youtube.com/embed/TwojKOD"
-        title="Magic Performance Philippe Tłokiński"
-        allowfullscreen>
-      </iframe>
+      <iframe src="https://www.youtube.com/embed/TwojKOD" title="Magic Performance Philippe Tłokiński" allowfullscreen></iframe>
     </div>
-
   </div>
 </section>
 
@@ -102,9 +84,7 @@
 
 <section class="section" id="gallery">
   <div class="section-inner">
-
     <h2>Gallery</h2>
-
     <div class="grid">
       <img src="/assets/images/magic1.jpg" alt="">
       <img src="/assets/images/magic2.jpg" alt="">
@@ -113,7 +93,6 @@
       <img src="/assets/images/magic5.jpg" alt="">
       <img src="/assets/images/magic6.jpg" alt="">
     </div>
-
   </div>
 </section>
 
@@ -121,20 +100,16 @@
 
 <section class="section" id="performance">
   <div class="section-inner">
-
     <h2>Performance</h2>
-
     <p>
       Chcecie zamówić „Red Jacket Show”? Philippe założy swoją czerwoną marynarkę
       i niczym superbohater zadba o dobrą zabawę podczas urodzin, komunii
       oraz wydarzeń rodzinnych.
     </p>
-
     <p>
       Najczęściej jest to 40-minutowy pokaz iluzji przeznaczony dla widzów
       w różnym wieku — zarówno dla dzieci, jak i dorosłych.
     </p>
-
   </div>
 </section>
 
@@ -142,18 +117,8 @@
 
 <section class="section" id="contact">
   <div class="section-inner">
-
     <h2>Contact</h2>
-
-    <p>Rezerwacje i współpraca:</p>
-
-    <p>
-      Email:
-      <a href="mailto:contact@philippetlokinski.com">
-        contact@philippetlokinski.com
-      </a>
-    </p>
-
+    <p>Email: <a href="mailto:contact@philippetlokinski.com">contact@philippetlokinski.com</a></p>
   </div>
 </section>
 
