--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p class="role">Actor · Magician</p>
 
     <div class="role-switch">
-      <a href="/" class="role-btn role-btn--actor">Actor</a>
+      <a href="#biography" class="role-btn role-btn--actor">Actor</a>
       <a href="/magician/" class="role-btn role-btn--magician">Magician</a>
     </div>
   </div>
