--- a/magician/index.html
+++ b/magician/index.html
@@ -38,7 +38,7 @@
 
     <div class="role-switch">
       <a href="/" class="role-btn role-btn--actor">Actor</a>
-      <a href="/magician/" class="role-btn role-btn--magician">Magician</a>
+      <a href="#story" class="role-btn role-btn--magician">Magician</a>
     </div>
   </div>
 </section>
