--- a/magician/index.html
+++ b/magician/index.html
@@ -34,7 +34,7 @@
 <section class="hero magician-hero">
   <div class="hero-inner">
     <h1>Philippe Tłokiński</h1>
-    <p class="role">Magician · Actor</p>
+    <p class="role">Actor · Magician</p>
 
     <div class="role-switch">
       <a href="/" class="role-btn role-btn--actor">Actor</a>
