--- a/magician/index.html
+++ b/magician/index.html
@@ -19,6 +19,14 @@
     <a href="#">TikTok</a>
   </div>
 
+<div class="lang-switch">
+  <a href="/pl/" class="lang active">PL</a>
+  <span>|</span>
+  <a href="/en/" class="lang">EN</a>
+  <span>|</span>
+  <a href="/fr/" class="lang">FR</a>
+</div>
+  
   <nav class="topbar-nav">
     <a href="#story">Magician</a>
     <a href="#video">Video</a>
