--- a/magician/index.html
+++ b/magician/index.html
@@ -11,14 +11,35 @@
 <body class="page page--magician">
 
 <header class="topbar">
-  <div class="topbar-left">
-    <a href="#">Twitter</a>
-    <a href="#">Instagram</a>
-    <a href="#">Facebook</a>
-    <a href="#">IMDb</a>
-    <a href="#">LinkedIn</a>
-    <a href="#">TikTok</a>
-  </div>
+  <div class="topbar-left social-icons">
+  <a href="https://imdb.com/name/TWOJ-ID" target="_blank" aria-label="IMDb">
+    <i class="fab fa-imdb"></i>
+  </a>
+
+  <a href="https://linkedin.com/in/TWOJPROFIL" target="_blank" aria-label="LinkedIn">
+    <i class="fab fa-linkedin-in"></i>
+  </a>
+
+  <a href="https://twitter.com/TWOJPROFIL" target="_blank" aria-label="Twitter">
+    <i class="fab fa-x-twitter"></i>
+  </a>
+
+  <a href="https://facebook.com/TWOJPROFIL" target="_blank" aria-label="Facebook">
+    <i class="fab fa-facebook-f"></i>
+  </a>
+
+  <a href="https://instagram.com/TWOJPROFIL" target="_blank" aria-label="Instagram">
+    <i class="fab fa-instagram"></i>
+  </a>
+
+  <a href="https://tiktok.com/@TWOJPROFIL" target="_blank" aria-label="TikTok">
+    <i class="fab fa-tiktok"></i>
+  </a>
+
+  <a href="https://youtube.com/TWOJKANAL" target="_blank" aria-label="YouTube">
+    <i class="fab fa-youtube"></i>
+  </a>
+</div>
 
 <div class="lang-switch">
   <a href="/pl/" class="lang active">PL</a>
