--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <i class="fab fa-linkedin-in"></i>
   </a>
 
-  <a href="https://twitter.com/TWOJPROFIL" target="_blank" aria-label="Twitter">
+  <a href="https://twitter.com/PhilTlokinski" target="_blank" aria-label="Twitter">
     <i class="fab fa-x-twitter"></i>
   </a>
 
-  <a href="https://facebook.com/TWOJPROFIL" target="_blank" aria-label="Facebook">
+  <a href="https://facebook.com/PhilippeTlokinski" target="_blank" aria-label="Facebook">
     <i class="fab fa-facebook-f"></i>
   </a>
 
-  <a href="https://instagram.com/TWOJPROFIL" target="_blank" aria-label="Instagram">
+  <a href="https://instagram.com/philippetlokinski" target="_blank" aria-label="Instagram">
     <i class="fab fa-instagram"></i>
   </a>
 
-  <a href="https://tiktok.com/@TWOJPROFIL" target="_blank" aria-label="TikTok">
+  <a href="https://tiktok.com/@philippetlokinski" target="_blank" aria-label="TikTok">
     <i class="fab fa-tiktok"></i>
   </a>
 
