--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <header class="topbar">
   <div class="topbar-left social-icons">
-  <a href="https://imdb.com/name/TWOJ-ID" target="_blank" aria-label="IMDb">
+  <a href="https://imdb.com/name/nm4683400" target="_blank" aria-label="IMDb">
     <i class="fab fa-imdb"></i>
   </a>
 
