--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <i class="fab fa-imdb"></i>
   </a>
 
-  <a href="https://linkedin.com/in/TWOJPROFIL" target="_blank" aria-label="LinkedIn">
+  <a href="https://linkedin.com/in/philippetlokinski" target="_blank" aria-label="LinkedIn">
     <i class="fab fa-linkedin-in"></i>
   </a>
 
