--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <i class="fab fa-tiktok"></i>
   </a>
 
-  <a href="https://youtube.com/TWOJKANAL" target="_blank" aria-label="YouTube">
+  <a href="https://youtube.com/PhilippeTlokinski" target="_blank" aria-label="YouTube">
     <i class="fab fa-youtube"></i>
   </a>
 </div>
