--- a/magician/index.html
+++ b/magician/index.html
@@ -12,31 +12,31 @@
 
 <header class="topbar">
   <div class="topbar-left social-icons">
-  <a href="https://imdb.com/name/TWOJ-ID" target="_blank" aria-label="IMDb">
+  <a href="https://imdb.com/name/nm4683400" target="_blank" aria-label="IMDb">
     <i class="fab fa-imdb"></i>
   </a>
 
-  <a href="https://linkedin.com/in/TWOJPROFIL" target="_blank" aria-label="LinkedIn">
+  <a href="https://linkedin.com/in/philippetlokinski" target="_blank" aria-label="LinkedIn">
     <i class="fab fa-linkedin-in"></i>
   </a>
 
-  <a href="https://twitter.com/TWOJPROFIL" target="_blank" aria-label="Twitter">
+  <a href="https://twitter.com/PhilTlokinski" target="_blank" aria-label="Twitter">
     <i class="fab fa-x-twitter"></i>
   </a>
 
-  <a href="https://facebook.com/TWOJPROFIL" target="_blank" aria-label="Facebook">
+  <a href="https://facebook.com/PhilippeTlokinski" target="_blank" aria-label="Facebook">
     <i class="fab fa-facebook-f"></i>
   </a>
 
-  <a href="https://instagram.com/TWOJPROFIL" target="_blank" aria-label="Instagram">
+  <a href="https://instagram.com/philippetlokinski" target="_blank" aria-label="Instagram">
     <i class="fab fa-instagram"></i>
   </a>
 
-  <a href="https://tiktok.com/@TWOJPROFIL" target="_blank" aria-label="TikTok">
+  <a href="https://tiktok.com/@philippetlokinski" target="_blank" aria-label="TikTok">
     <i class="fab fa-tiktok"></i>
   </a>
 
-  <a href="https://youtube.com/TWOJKANAL" target="_blank" aria-label="YouTube">
+  <a href="https://youtube.com/PhilippeTlokinski" target="_blank" aria-label="YouTube">
     <i class="fab fa-youtube"></i>
   </a>
 </div>
